# PackageBreeder

./: .gitignore  Makefile.am  README.md  configure.ac
contrib/: Makefile.am  species.yaml
contrib/genomes/: Makefile.am  package-1.0.0.yaml
src/: Makefile.am  package-breeder.py
src/package_breeder/: Makefile.am  genome.py  genome_dependencies.py  main.py  nest.py  specie.py  specie_packages.py  tags.py
